<resources>
    <string name="app_name" translatable="false">HyperCeiler</string>
    <string name="navigation_home_title" translatable="false">@string/home</string>
    <string name="floating_window">Freeform</string>
    <string name="system_framework_volume_title">Volume</string>
    <string name="system_framework_other_title">Others</string>
    <string name="system_framework_display_title">Display</string>
    <string name="system_framework_phone_title">Network</string>
    <string name="system_framework_phone_network_title">Network settings</string>
    <string name="phone_double_5g_nr">Double card use 5G (SA+NSA)</string>
    <string name="phone_double_5g_nr_desc">Main and secondary SIM-card enable 5G at the same time (The secondary SIM-card only support NSA)</string>
    <string name="phone_double_5g_sa">Double card use SA (SA+SA)</string>
    <string name="phone_double_5g_sa_desc">Experimental feature. Make the secondary SIM-card support SA.</string>
    <string name="system_framework_phone_band_title">Band settings</string>
    <string name="phone_n1">N1 band</string>
    <string name="phone_n1_desc">Support N1 band (NR)</string>
    <string name="phone_n28">N28 band</string>
    <string name="phone_n28_desc">Support N28 band (NR)</string>
    <string name="phone_n5_n8">N5/N8 band</string>
    <string name="phone_n5_n8_desc">Enter *#*#65686633#*#* on the dialer interface to enable support for N5/N8 bands. If it shows \"enable N5 and N8 mode\", the feature will be successfully activated.</string>
    <string name="system_framework_screen_title">Display &amp; notifications</string>
    <string name="system_framework_core_title">Core underneath</string>
    <string name="system_framework_hook_entry">Unlock navigation disconnection protection limit</string>
    <string name="system_framework_shortcut_title">Share shortcuts</string>
    <string name="system_framework_screen_all_rotations">Screen rotation</string>
    <string name="system_framework_allow_untrusted_touch">Allow untrusted touch</string>
    <string name="system_framework_allow_uninstall">Allow uninstall some pre-installed apps</string>
    <string name="system_framework_allow_uninstall_desc">This feature is dangerous</string>
    <string name="system_framework_clipboard_whitelist">Allow app to read clipboard at background</string>
    <string name="system_framework_clipboard_whitelist_desc">Allow apps to get READ_LOGS permission</string>
    <string name="system_framework_clipboard_whitelist_list">The whitelist that can read the clipboard at background</string>
    <string name="system_framework_clipboard_whitelist_list_desc">For more than 1 app, separate with |</string>
    <string name="system_framework_disable_app_link_verify">Disable app link verify</string>
    <string name="system_framework_disable_app_link_verify_desc">Revert to opening supported apps directly when opening links without enabling supported links in app settings</string>
    <string name="system_framework_clean_share_menu">Clean up share menu</string>
    <string name="system_framework_clean_share_apps">Selected apps</string>
    <string name="system_framework_clean_share_apps_desc">The selected app won\'t appear in the share menu</string>
    <string name="system_framework_clean_open_menu">Clean up open with menu</string>
    <string name="system_framework_clean_open_apps">Selected apps</string>
    <string name="system_framework_clean_open_apps_desc">The selected app won\'t appear in the open with menu</string>
    <string name="system_other_flag_secure">Allow screenshot</string>
    <string name="system_other_flag_secure_desc">Allows screenshots and screen recordings of any app</string>
    <string name="system_other_delete_on_post_notification">Remove the upper display notification</string>
    <string name="system_other_delete_on_post_notification_desc">Remove \"This app is displaying on top of other apps on screen\" notification</string>
    <string name="system_framework_other_use_original_animation">Transition animations use native styles</string>
    <string name="system_framework_other_speed_install">Speed install</string>
    <string name="system_framework_other_speed_install_desc">Install to running memory to speed up installation</string>
    <string name="system_framework_other_rotation_button">Rotation recommendations</string>
    <string name="system_framework_other_thermal_brightness">Disable automatic screen brightness reduction</string>
    <string name="system_framework_other_thermal_brightness_more">Automatically reduce screen brightness only when not caused by temperature control</string>
    <string name="system_framework_other_disable_cleaner">Disable kill background apps</string>
    <string name="system_framework_other_disable_cleaner_desc">Experimental feature. May cause running memory usage abnormally.</string>
    <string name="system_framework_disable_72h_verify">Disable Lock screen verify every 72 hours</string>
    <string name="system_framework_disable_verify_can_ve_disabled">Disable to verify can be disabled</string>
    <string name="system_framework_disablt_miuilite_check">Disable MIUI Lite Check</string>
    <string name="system_framework_allow_manage_all_notifications">Allow to manage all notifications</string>
    <string name="system_framework_quick_screenshot">Quick screenshot</string>
    <string name="system_framework_quick_screenshot_desc">Disable screenshot delay</string>
    <string name="system_framework_disable_link_turbo_toast">Hide hint of mobile network used for acceleration</string>
    <string name="system_framework_corepatch_title">Package manager service</string>
    <string name="system_framework_core_patch_downgr">Allow downgrade</string>
    <string name="system_framework_core_patch_downgr_desc">Allow downgrade apps</string>
    <string name="system_framework_core_patch_auth_creak">Disable digest verify</string>
    <string name="system_framework_core_patch_auth_creak_desc">Allows install apps after modify file in apk (ignore invalid digest error)</string>
    <string name="system_framework_disable_integrity">Disable system integrity checks</string>
    <string name="system_framework_disable_integrity_desc">Automatic recovery of tampered content is prohibited. When the Disable digest verify function is turned on, it will be enabled by default. Only supports Android 13 and above.</string>
    <string name="system_framework_core_patch_shared_user">Bypass shared user signature verify</string>
    <string name="system_framework_core_patch_shared_user_desc">Allow installation of apps that differ from their shared user signatures. This feature is somewhat dangerous and should only be enabled when needed.</string>
    <string name="system_framework_core_patch_digest_creak">Disable compare signatures</string>
    <string name="system_framework_core_patch_digest_creak_desc">Allow re-install app with different signatures</string>
    <string name="system_framework_core_patch_use_pre_signature">Use installed signatures</string>
    <string name="system_framework_core_patch_use_pre_signature_desc">This feature is extremely dangerous and should only be enabled when absolutely necessary</string>
    <string name="system_framework_core_patch_enhanced_mode">Enhanced mode</string>
    <string name="system_framework_core_patch_enhanced_mode_desc">Pass some validation in the app</string>
    <string name="system_framework_disable_low_api_check">Disable low API check</string>
    <string name="system_framework_disable_low_api_check_desc">Apps with APIs lower than 23 are allowed</string>
    <string name="system_framework_disable_persistent">Disable persistent checks</string>
    <string name="system_framework_disable_persistent_more">Allows you to update persistent apps directly, such as updating the system interface directly.</string>
    <string name="system_framework_disable_verification_agent">Disable package verification agent</string>
    <string name="system_framework_disable_verification_agent_desc">e.g. Google Play Protection</string>
    <string name="system_framework_core_patch_bypass_isolation_violation">Bypass isolation violation</string>
    <string name="system_framework_core_patch_bypass_isolation_violation_desc">Allow third-party apps to install system apps</string>
    <string name="system_framework_core_patch_allow_update_system_app">Allow update system apps</string>
    <string name="system_framework_core_patch_allow_update_system_app_desc">Allow installation of system apps when updating system apps is disabled</string>
    <string name="home_gesture_double_tap">Double click</string>
    <string name="home_gesture_double_tap_desc">Double-tap anywhere on the Home screen</string>
    <string name="home_gesture_shake">Shake</string>
    <string name="home_gesture_shake_desc">Shake device from any Home screen</string>
    <string name="home_gesture_left_swipe">Swipe left</string>
    <string name="home_gesture_left_swipe_desc">Swipe left on the Home screen Dock</string>
    <string name="home_gesture_right_swipe">Swipe right</string>
    <string name="home_gesture_right_swipe_desc">Swipe right on the Home screen Dock</string>
    <string name="home_gesture_up_swipe">Swipe up</string>
    <string name="home_gesture_up_swipe_desc">Swipe up with one finger on any Home screen</string>
    <string name="home_gesture_down_swipe">Swipe down</string>
    <string name="home_gesture_down_swipe_desc">Swipe down with one finger on any Home screen</string>
    <string name="home_gesture_up_swipe2">Swipe up with two fingers</string>
    <string name="home_gesture_up_swipe2_desc">Swipe up with two fingers on any Home screen</string>
    <string name="home_gesture_down_swipe2">Swipe down with two fingers</string>
    <string name="home_gesture_down_swipe2_desc">Swipe down with two fingers on any Home screen</string>
    <string name="system_framework_guided_access_sc">It\'s forbidden to call out the sidebar when pinned</string>
    <string name="system_framework_guided_access_screen">Jump to the Lock screen when unpinned</string>
    <string name="system_framework_guided_access">Fixed apps</string>
    <string name="system_framework_guided_access_more">Guided Access similar to iOS, which pins the current app to the screen.\nTo use, press and hold the upper status bar; to exit, press and hold the upper status bar again.\nThe first time you use it, you need to restart the device.</string>
    <string name="security_center_app_title">Manage apps</string>
    <string name="security_app_title">Show additional app details</string>
    <string name="security_app_summary">Add new fields to app into page:\n• App version number\n• User ID\n• Data directory\n• APK directory\n• Min SDK version\n• Target SDK version\n• Open with Play Store\n• Launch</string>
    <string name="security_app_sort_title">App management list sorting</string>
    <string name="security_app_sort_summary">Modify the default sorting of the manage apps list</string>
    <string name="security_restrict_app_title">Full restrictions</string>
    <string name="security_restrict_app_summary">Allows configuring Battery saver and Wi-Fi access for system apps</string>
    <string name="security_disable_app_title">App state control</string>
    <string name="security_disable_app_summary">Allows disabling any app from app info page</string>
    <string name="security_disable_app_url_title">Apply open link management</string>
    <string name="security_disable_app_url_summary">Change the \"Clear defaults\" setting to \"Open by default\" in the app info.</string>
    <string name="security_center_disable_ban">Remove report button</string>
    <string name="security_center_aosp_app_info">Add AOSP app info entry</string>
    <string name="security_center_aosp_app_manager">Add AOSP app manager entry</string>
    <string name="various_disable_access_device_logs">Dismiss access device logs request dialog</string>
</resources>