<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/system_framework_other_title">
    <PreferenceCategory android:title="@string/system_framework_screen_title">
        <DropDownPreference
            android:defaultValue="0"
            android:key="prefs_key_system_framework_other_rotation_button_int"
            android:title="@string/system_framework_other_rotation_button"
            app:entries="@array/system_framework_other_rotation_button_mode"
            app:entryValues="@array/status_bar_icon_mode_value" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_screen_all_rotations"
            android:title="@string/system_framework_screen_all_rotations" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_quick_screenshot"
            android:summary="@string/system_framework_quick_screenshot_desc"
            android:title="@string/system_framework_quick_screenshot" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disable_72h_verify"
            android:title="@string/system_framework_disable_72h_verify" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_other_thermal_brightness"
            android:summary="@string/system_framework_other_thermal_brightness_more"
            android:title="@string/system_framework_other_thermal_brightness" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disable_app_link_verify"
            android:summary="@string/system_framework_disable_app_link_verify_desc"
            android:title="@string/system_framework_disable_app_link_verify" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_other_use_original_animation"
            android:title="@string/system_framework_other_use_original_animation" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_various_disable_access_device_logs"
            android:title="@string/various_disable_access_device_logs" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disable_link_turbo_toast"
            android:title="@string/system_framework_disable_link_turbo_toast" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_allow_manage_all_notifications"
            android:title="@string/system_framework_allow_manage_all_notifications" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_other_flag_secure"
            android:summary="@string/system_other_flag_secure_desc"
            android:title="@string/system_other_flag_secure" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_allow_untrusted_touch"
            android:title="@string/system_framework_allow_untrusted_touch" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_guided_access"
            android:summary="@string/system_framework_guided_access_more"
            android:title="@string/system_framework_guided_access" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="prefs_key_system_framework_guided_access"
            android:key="prefs_key_system_framework_guided_access_sc"
            android:title="@string/system_framework_guided_access_sc" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="prefs_key_system_framework_guided_access"
            android:key="prefs_key_system_framework_guided_access_screen"
            android:title="@string/system_framework_guided_access_screen" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_other_delete_on_post_notification"
            android:summary="@string/system_other_delete_on_post_notification_desc"
            android:title="@string/system_other_delete_on_post_notification" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_framework_core_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_other_speed_install"
            android:summary="@string/system_framework_other_speed_install_desc"
            android:title="@string/system_framework_other_speed_install" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_other_disable_cleaner"
            android:summary="@string/system_framework_other_disable_cleaner_desc"
            android:title="@string/system_framework_other_disable_cleaner" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_hook_entry"
            android:title="@string/system_framework_hook_entry" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disable_verify_can_ve_disabled"
            android:title="@string/system_framework_disable_verify_can_ve_disabled" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disablt_miuilite_check"
            android:title="@string/system_framework_disablt_miuilite_check" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_allow_uninstall"
            android:summary="@string/system_framework_allow_uninstall_desc"
            android:title="@string/system_framework_allow_uninstall" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_clipboard_whitelist"
            android:summary="@string/system_framework_clipboard_whitelist_desc"
            android:title="@string/system_framework_clipboard_whitelist" />

        <Preference
            android:dependency="prefs_key_system_framework_clipboard_whitelist"
            android:key="prefs_key_system_framework_clipboard_whitelist_apps"
            android:title="@string/system_framework_clipboard_whitelist_list" />

        <EditTextPreference
            android:defaultValue="com.fooview.android.fooview"
            android:key="prefs_key_system_framework_clipboard_whitelist_list"
            android:summary="@string/system_framework_clipboard_whitelist_list_desc"
            android:title="@string/system_framework_clipboard_whitelist_list"
            app:isPreferenceVisible="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_framework_shortcut_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_clean_share_menu"
            android:title="@string/system_framework_clean_share_menu" />

        <Preference
            android:dependency="prefs_key_system_framework_clean_share_menu"
            android:key="prefs_key_system_framework_clean_share_apps"
            android:summary="@string/system_framework_clean_share_apps_desc"
            android:title="@string/system_framework_clean_share_apps" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_clean_open_menu"
            android:title="@string/system_framework_clean_open_menu" />

        <Preference
            android:dependency="prefs_key_system_framework_clean_open_menu"
            android:key="prefs_key_system_framework_clean_open_apps"
            android:summary="@string/system_framework_clean_open_apps_desc"
            android:title="@string/system_framework_clean_open_apps" />

    </PreferenceCategory>
</PreferenceScreen>