<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/system_framework_phone_network_title">

        <SwitchPreference
                android:title="@string/phone_double_5g_nr"
                android:summary="@string/phone_double_5g_nr_desc"
                android:key="prefs_key_phone_double_5g_nr"
                android:defaultValue="false"/>

        <SwitchPreference
                android:title="@string/phone_double_5g_sa"
                android:summary="@string/phone_double_5g_sa_desc"
                android:key="prefs_key_phone_double_5g_sa"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_framework_phone_band_title">

        <SwitchPreference
                android:title="@string/phone_n1"
                android:summary="@string/phone_n1_desc"
                android:key="prefs_key_phone_n1"
                android:defaultValue="false"/>

        <SwitchPreference
                android:title="@string/phone_n5_n8"
                android:summary="@string/phone_n5_n8_desc"
                android:key="prefs_key_phone_n5_n8"
                android:defaultValue="false"/>

        <SwitchPreference
                android:title="@string/phone_n28"
                android:summary="@string/phone_n28_desc"
                android:key="prefs_key_phone_n28"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <Preference
            android:summary=""/>

</PreferenceScreen>