<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <Preference
            android:fragment="com.sevtinge.hyperceiler.ui.sub.framework.FreeFormSettings"
            android:title="@string/floating_window" />

        <Preference
            android:fragment="com.sevtinge.hyperceiler.ui.sub.framework.VolumeSettings"
            android:title="@string/system_framework_volume_title" />

        <Preference
            android:fragment="com.sevtinge.hyperceiler.ui.sub.framework.DisplaySettings"
            android:title="@string/system_framework_display_title" />

        <Preference
            android:fragment="com.sevtinge.hyperceiler.ui.sub.framework.NetworkSettings"
            android:key="prefs_key_system_framework_network"
            android:title="@string/system_framework_phone_title" />

        <Preference
            android:fragment="com.sevtinge.hyperceiler.ui.sub.framework.OtherSettings"
            android:title="@string/system_framework_other_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_framework_corepatch_title">

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_downgr"
            android:summary="@string/system_framework_core_patch_downgr_desc"
            android:title="@string/system_framework_core_patch_downgr" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_auth_creak"
            android:summary="@string/system_framework_core_patch_auth_creak_desc"
            android:title="@string/system_framework_core_patch_auth_creak" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_disable_integrity"
            android:summary="@string/system_framework_disable_integrity_desc"
            android:title="@string/system_framework_disable_integrity" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_shared_user"
            android:summary="@string/system_framework_core_patch_shared_user_desc"
            android:title="@string/system_framework_core_patch_shared_user"
            android:dependency="prefs_key_system_framework_core_patch_auth_creak"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_digest_creak"
            android:summary="@string/system_framework_core_patch_digest_creak_desc"
            android:title="@string/system_framework_core_patch_digest_creak" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_use_pre_signature"
            android:summary="@string/system_framework_core_patch_use_pre_signature_desc"
            android:title="@string/system_framework_core_patch_use_pre_signature" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_core_patch_enhanced_mode"
            android:summary="@string/system_framework_core_patch_enhanced_mode_desc"
            android:title="@string/system_framework_core_patch_enhanced_mode" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_disable_low_api_check"
            android:summary="@string/system_framework_disable_low_api_check_desc"
            android:title="@string/system_framework_disable_low_api_check"
            app:controller="com.sevtinge.hyperceiler.controller.DisableLowApiCheckController"/>

    </PreferenceCategory>

</PreferenceScreen>